--- a/react-projects/simple-components/src/Components/RecordDisplayerUsingHooksComponent/HRecordDisplayerComponent.scss
+++ b/react-projects/simple-components/src/Components/RecordDisplayerUsingHooksComponent/HRecordDisplayerComponent.scss
@@ -1,12 +1,17 @@
-#container{
+.container{
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
+
+  &--spinner, &--container{
+    flex-direction: row;  
+  }
+
 }
-#fetch-button{
+.fetch-button{
   margin-left: 40%;
   margin-right: 40%;
   width: 20%;
@@ -16,7 +21,7 @@
   margin-bottom: 5px;
 }
 
-.spinner-container, .info-container{
+.info-container{
   display: flex;
   flex-direction: row;
   justify-content: center;
